backend/serivce.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 443  # Expose port 443 externally
      targetPort: 443  # Route traffic to port 443 of backend Pods
