backend/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-network-policy
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
    - Egress # Allow egress traffic
  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 443
  egress: # Allow outbound traffic
    - to:
        - podSelector:
            matchLabels:
              app: mongodb # Allow traffic to MongoDB pods
      ports:
        - protocol: TCP
          port: 27017
    - to:
        - podSelector:
            matchLabels:
              app: rabbitmq # Allow traffic to RabbitMQ pods
      ports:
        - protocol: TCP
          port: 5672
